--- a/MusicMatch/assets/css/profile.css
+++ b/MusicMatch/assets/css/profile.css
@@ -7,6 +7,10 @@
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 
+h1 span{
+    color: var(--primary);
+}
+
 .profile {
     display: flex;
     align-items: center;
@@ -28,3 +32,18 @@
     text-align: left;
 }
 
+.action-buttons a {
+    background-color: #eee;
+}
+
+@media (max-width: 992px) {
+
+    h1 { text-align: center;}
+
+    .action-buttons{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
